--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+#header{
+	width: 100%;
+}
+
 #chart-area svg {
 	margin-left: auto;
     margin-right: auto;
@@ -35,7 +39,7 @@
 }
 #year-range{
 	display: inline;
-	width: 90%;
+	width: 80%;
 }
 #range-value{
 	text-align: center;
